tests/neg/i5015.scala
enum A extends AnyRef { } // error